SASS first task finished

--- a/Web/CSS/4.SASS/2.PhotoGallery/index.html
+++ b/Web/CSS/4.SASS/2.PhotoGallery/index.html
@@ -8,47 +8,47 @@
     <ul>
         <li>
             <label for="horses">
-                <img src="images/horses.jpg" />   
+                <img src="images/horses.jpg" alt="horses"/>   
             </label>
         </li>
         <li>
             <label for="lions">
-                <img src="images/lions.jpg" />
+                <img src="images/lions.jpg" alt="lions"/>
             </label>
         </li>
         <li>
             <label for="male-lion">
-                <img src="images/male-lion.jpg" />
+                <img src="images/male-lion.jpg" alt="male-lion"/>
             </label>
         </li>
         <li>
             <label for="polar-bear">
-                <img src="images/polar-bear.jpg" />
+                <img src="images/polar-bear.jpg" alt="polar-bear"/>
             </label>
         </li>
         <li>
             <label for="squirrel">
-                <img src="images/squirrel.jpg" />
+                <img src="images/squirrel.jpg" alt="squirrel"/>
             </label>
         </li>
         <li>
             <label for="tiger">
-                <img src="images/tiger.jpg" />
+                <img src="images/tiger.jpg" alt="tiger"/>
             </label>
         </li>
         <li>
             <input type="radio" name="animals" id="horses"/>
-            <img src="images/horses.jpg" /> 
+            <img src="images/horses.jpg" alt="horses"/> 
             <input type="radio" name="animals" id="lions"/>
-            <img src="images/lions.jpg" />
+            <img src="images/lions.jpg" alt="lions"/>
             <input type="radio" name="animals" id="male-lion"/>
-            <img src="images/male-lion.jpg" />
+            <img src="images/male-lion.jpg" alt="male-lion"/>
             <input type="radio" name="animals" id="polar-bear"/>
-            <img src="images/polar-bear.jpg" />
+            <img src="images/polar-bear.jpg" alt="polar-bear"/>
             <input type="radio" name="animals" id="squirrel"/>
-            <img src="images/squirrel.jpg" />
+            <img src="images/squirrel.jpg" alt="squirrel"/>
             <input type="radio" name="animals" id="tiger"/>
-            <img src="images/tiger.jpg" />
+            <img src="images/tiger.jpg" alt="tiger"/>
         </li>
     </ul>
 </body>
