Bender task update.Css file added

--- a/Web/HTML/1.Basics/Bender/Friends.html
+++ b/Web/HTML/1.Basics/Bender/Friends.html
@@ -4,25 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Friends</title>
-    <style>
-        body
-        {
-            background-color:#ccecff
-        }
-        ol
-        {
-            list-style : none;
-        }   
-        li
-        {
-            display :inline;
-            padding-right: 35px;
-        }
-        img
-        {
-            width:150px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
     <nav>
