--- a/Web/HTML/2.Tables/1.Tables/1.1 Fresh Fruits/default.html
+++ b/Web/HTML/2.Tables/1.Tables/1.1 Fresh Fruits/default.html
@@ -22,7 +22,7 @@
                     will help keep you healthy, fit and trim.
                 </td>
                 <td>
-                    <img src="fruits.jpg" height="150" alt=""/>
+                    <img src="fruits.jpg" height="150" alt="fruits"/>
                 </td>
             </tr>
         </tbody>
