--- a/Web/JavaScript/8.Functions/8.Functions/index.html
+++ b/Web/JavaScript/8.Functions/8.Functions/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>All tasks return result in the console!</h1>
-    <a href="#" onclick="indexOfBiggerThanNeighbors()">result</a>
+    <a href="#" onclick="returnLastDigit(), reverseDigits()">Task 1 & 2</a>
+    <a href="#" onclick="searchFor()">Task 3</a>
+    <a href="#" onclick="divCounter()">Task 4</a>
+    <a href="#" onclick="numCounter()">Task 5</a>
+    <a href="#" onclick="checkNeighbors(14), indexOfBiggerThanNeighbors([96, 30, 85, 73, 6, 58, 34, 64, 10, 4, 83, 34, 98, 61, 48])">Task 6 & 7</a>
     <p id="textToUse" style="display:none">The Matrix is a 1999 American science fiction action film written and directed by The
         Wachowski Brothers, starring Keanu Reeves, Laurence Fishburne, Carrie-Anne Moss, Hugo
         Weaving, and Joe Pantoliano. It depicts a dystopian future in which reality as perceived
